Maps/Forms section and fix cut off in previous commit.

--- a/sass/partials/design/_responsive.scss
+++ b/sass/partials/design/_responsive.scss
@@ -128,4 +128,21 @@ $vert-col-border-style: 1px dashed white;
     .view-featured-article .views-row {
       width: 100%;
       border-bottom: $vert-col-border-style;
-      margi
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+    }
+  }
+}
+
+// maps/forms page
+.page-node-26 {
+  iframe#googlemap {
+    margin-bottom: 2rem;
+  }
+
+  @include breakpoint($small) {
+    h1 {
+      text-align: center;
+    }
+  }
+}
